View Annual Schedule

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -10,6 +10,7 @@ title.error= Error Page
 title.searchrp=Search Radio Program Page
 title.crudrp=Maintain Radio Program Page
 title.setuprp=Create/Modify Radio Program Page
+title.setupSchedule=Setup Schedule
 
 # -----------------------------------------
 # Captions used for reference messages & menu items
@@ -30,6 +31,7 @@ caption.menu.login= Login
 caption.menu.logout= Logout
 caption.menu.searchrp= Search Program
 caption.menu.managerp=Maintain Program
+caption.menu.setupSchedule=Setup Schedule
 
 # -----------------------------------------
 # Form field labels: used as prompts and for error handling
@@ -56,6 +58,9 @@ label.crudrp.duration=Duration
 label.crudrp.add=Create Radio Program
 label.crudrp.edit=Modify Radio Program
 label.crudrp.delete=Delete Radio Program
+label.setupsch.annualSchedule=Annual Schedule
+label.setupsch.weeklySchedule=Weekly Schedule
+label.setupsch.programSlots=Program Slots
 
 
 
