Copy Weekly Schedule

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -61,6 +61,10 @@ label.crudrp.delete=Delete Radio Program
 label.setupsch.annualSchedule=Annual Schedule
 label.setupsch.weeklySchedule=Weekly Schedule
 label.setupsch.programSlots=Program Slots
+label.setupsch.psname=Program Name
+label.setupsch.psdate=Program Date
+label.setupsch.psduration=Program Duration (hh:mm:ss)
+label.setupsch.psstarttime=Program Start Time (hh:mm:ss)
 
 
 
