Web interface for Annual Schedule. Weekly schedule creation works only for first four weeks, fix is work in progress.

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -11,6 +11,7 @@ title.searchrp=Search Radio Program Page
 title.crudrp=Maintain Radio Program Page
 title.setuprp=Create/Modify Radio Program Page
 title.setupSchedule=Setup Schedule
+title.createas=Create Annual Schedule
 
 # -----------------------------------------
 # Captions used for reference messages & menu items
@@ -65,7 +66,8 @@ label.setupsch.psname=Program Name
 label.setupsch.psdate=Program Date
 label.setupsch.psduration=Program Duration (hh:mm:ss)
 label.setupsch.psstarttime=Program Start Time (hh:mm:ss)
-
+label.createas.year=Year
+label.createas.assignedBy=Assigned by
 
 
 # -----------------------------------------
