Names added/modified in property file

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -10,7 +10,7 @@ title.error= Error Page
 title.searchrp=Search Radio Program Page
 title.crudrp=Maintain Radio Program Page
 title.setuprp=Create/Modify Radio Program Page
-title.setupSchedule=Setup Schedule
+title.setupSchedule=Maintain Schedule
 title.createas=Create Annual Schedule
 
 # -----------------------------------------
@@ -32,7 +32,7 @@ caption.menu.login= Login
 caption.menu.logout= Logout
 caption.menu.searchrp= Search Program
 caption.menu.managerp=Maintain Program
-caption.menu.setupSchedule=Setup Schedule
+caption.menu.setupSchedule=Maintain Schedule
 
 # -----------------------------------------
 # Form field labels: used as prompts and for error handling
@@ -68,6 +68,9 @@ label.setupsch.psduration=Program Duration (hh:mm:ss)
 label.setupsch.psstarttime=Program Start Time (hh:mm:ss)
 label.createas.year=Year
 label.createas.assignedBy=Assigned by
+label.setupsch.pspresenter=Presenter
+label.setupsch.psproducer=Producer
+
 
 
 # -----------------------------------------
