Updated menu to include create, modify and delete program slots.

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -33,6 +33,9 @@ caption.menu.logout= Logout
 caption.menu.searchrp= Search Program
 caption.menu.managerp=Maintain Program
 caption.menu.setupSchedule=Maintain Schedule
+caption.menu.createps=Create Program Slot
+caption.menu.modifyps=Modify Program Slot
+caption.menu.deleteps=Delete Program Slot
 
 # -----------------------------------------
 # Form field labels: used as prompts and for error handling
