Added new menu items (for create, modify and delete program slots) to the main jsp page.

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -11,12 +11,14 @@ title.searchrp=Search Radio Program Page
 title.crudrp=Maintain Radio Program Page
 title.setuprp=Create/Modify Radio Program Page
 title.setupSchedule=Maintain Schedule
+title.createps=Create Program Slot
+title.modifyps=Modify Program Slot
+title.deleteps=Delete Program Slot
 title.createas=Create Annual Schedule
 
 # -----------------------------------------
 # Captions used for reference messages & menu items
 # -----------------------------------------
-
 caption.user=User
 caption.role=Role
 caption.priviledge=Access Privilege 
@@ -40,14 +42,10 @@ caption.menu.deleteps=Delete Program Slot
 # -----------------------------------------
 # Form field labels: used as prompts and for error handling
 # -----------------------------------------
-
 fieldLabel.username=User Id
 fieldLabel.password=Password
 fieldLabel.name=Radio Program Name
 fieldLabel.description=Radio Program Description
-
-
-
 
 # -----------------------------------------
 # Table labels: used for printing data
@@ -73,8 +71,6 @@ label.createas.year=Year
 label.createas.assignedBy=Assigned by
 label.setupsch.pspresenter=Presenter
 label.setupsch.psproducer=Producer
-
-
 
 # -----------------------------------------
 # Application error messages
