List of Radio programs added in the maintain schedule page

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -57,6 +57,7 @@ label.crudrp=Maintain Radio Programs (Create, Modify and Delete)
 label.crudrp.name=Name
 label.crudrp.description=Description
 label.crudrp.duration=Duration
+label.setupsch.radioProgram=Radio Program
 label.crudrp.add=Create Radio Program
 label.crudrp.edit=Modify Radio Program
 label.crudrp.delete=Delete Radio Program
