Submitting fix for issue with creation of Weekly Schedules during annual schedule creation. The issue was because date formatter was returning day of year instead of day of month. This resulted into date after the month of January to be greater than 31, causing failure to write to weekly-schedule table. To fix this, the patter of the formatter has been changed from "YYYY-MM-DD" to "YYYY-MM-dd". On create schedule page, the headers have been changed from Year, Assigned By to Value and Data. Year input pox is now on focus when the page loads.

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -68,7 +68,9 @@ label.setupsch.psname=Program Name
 label.setupsch.psdate=Program Date
 label.setupsch.psduration=Program Duration (hh:mm:ss)
 label.setupsch.psstarttime=Program Start Time (hh:mm:ss)
-label.createas.year=Year
+label.createas.value=Value
+label.createas.data=Data
+label.createas.year=Year (YYYY)
 label.createas.assignedBy=Assigned by
 label.setupsch.pspresenter=Presenter
 label.setupsch.psproducer=Producer
