--- a/PRMS/nbproject/project.properties
+++ b/PRMS/nbproject/project.properties
@@ -29,7 +29,10 @@ excludes=
 file.reference.commons-beanutils-1.8.0.jar=lib/commons-beanutils-1.8.0.jar
 file.reference.commons-digester-2.0.jar=lib/commons-digester-2.0.jar
 file.reference.commons-logging-1.0.4.jar=lib/commons-logging-1.0.4.jar
+file.reference.hamcrest-core-1.2.1.jar=lib/hamcrest-core-1.2.1.jar
 file.reference.jcl-over-slf4j-1.5.8.jar=lib/jcl-over-slf4j-1.5.8.jar
+file.reference.junit-4.10.jar=lib/junit-4.10.jar
+file.reference.mockito-all-1.9.5.jar=lib/mockito-all-1.9.5.jar
 file.reference.mysql-connector-java-5.1.21-bin.jar=lib/mysql-connector-java-5.1.21-bin.jar
 file.reference.slf4j-api-1.5.8.jar=lib/slf4j-api-1.5.8.jar
 file.reference.slf4j-jdk14-1.5.8.jar=lib/slf4j-jdk14-1.5.8.jar
@@ -74,6 +77,9 @@ javac.classpath=\
     ${file.reference.tiles-servlet-wildcard-2.2.2.jar}:\
     ${file.reference.tiles-template-2.2.2.jar}:\
     ${file.reference.mysql-connector-java-5.1.21-bin.jar}:\
+    ${file.reference.mockito-all-1.9.5.jar}:\
+    ${file.reference.junit-4.10.jar}:\
+    ${file.reference.hamcrest-core-1.2.1.jar}:\
     ${reference.nocturne.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
