Separate page for Create program slot have been created. Need to do bug fixing and write business logic

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -57,7 +57,9 @@ label.crudrp=Maintain Radio Programs (Create, Modify and Delete)
 label.crudrp.name=Name
 label.crudrp.description=Description
 label.crudrp.duration=Duration
-label.setupsch.radioProgram=Radio Program
+label.createps.duration=Duration
+label.createps.radioProgram=Radio Program
+label.createps.programDate=Date of Program
 label.crudrp.add=Create Radio Program
 label.crudrp.edit=Modify Radio Program
 label.crudrp.delete=Delete Radio Program
@@ -70,6 +72,8 @@ label.setupsch.psduration=Program Duration (hh:mm:ss)
 label.setupsch.psstarttime=Program Start Time (hh:mm:ss)
 label.createas.value=Value
 label.createas.data=Data
+label.createps.value=Value
+label.createps.data=Data
 label.createas.year=Year (YYYY)
 label.createas.assignedBy=Assigned by
 label.setupsch.pspresenter=Presenter
