Added maintain user Use Case

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -16,6 +16,9 @@ title.modifyps=Modify Program Slot
 title.deleteps=Delete Program Slot
 title.createas=Create Annual Schedule
 
+title.cruduser=Maintain User Page
+title.setupuser=Create/Modify/Delete User Page
+title.manageuser=Maintain User
 # -----------------------------------------
 # Captions used for reference messages & menu items
 # -----------------------------------------
@@ -25,6 +28,10 @@ caption.priviledge=Access Privilege
 caption.welcome= Listen to Phoenix radio stations worldwide and live! We makes it easy with instant access, descriptions, details and ratings to thousands of live programs. Enjoy your stay!!!
 caption.menu= Menu
 caption.name= Name
+caption.desc= Description
+
+caption.menu.manageuser=Maintain User
+caption.search.user= Search User Id
 caption.desc= Description
 
 # -----------------------------------------
@@ -46,7 +53,7 @@ fieldLabel.username=User Id
 fieldLabel.password=Password
 fieldLabel.name=Radio Program Name
 fieldLabel.description=Radio Program Description
-
+fieldLabel.name.user=User Id
 # -----------------------------------------
 # Table labels: used for printing data
 # -----------------------------------------
@@ -78,7 +85,20 @@ label.createas.year=Year (YYYY)
 label.createas.assignedBy=Assigned by
 label.setupsch.pspresenter=Presenter
 label.setupsch.psproducer=Producer
-
+label.cruduser=Maintain Users (Create, Modify, Delete)/ Reset Password
+label.cruduser.add=Create User
+label.cruduser.edit=Modify User
+label.cruduser.delete=Delete User
+label.cruduser.resetpw=Reset Password
+label.cruduser.id=User Id
+label.cruduser.name=User Name
+label.cruduser.password=Password
+label.cruduser.oldpassword=Old Password
+label.cruduser.newpassword=New Password
+label.cruduser.role=Role
+label.modifyuser.title=Modify User
+label.deleteuser.title=Delete User
+label.resetpassword.title=Reset Password
 # -----------------------------------------
 # Application error messages
 # -----------------------------------------
