controller codes and jsp pages for modify/delete program slots.

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -68,6 +68,20 @@ label.createps.duration=Duration
 label.createps.startTime=Start Time
 label.createps.radioProgram=Radio Program
 label.createps.programDate=Date of Program
+label.modifyps.value=Value
+label.modifyps.data=Data
+label.modifyps.year=Year (YYYY)
+label.modifyps.duration=Duration
+label.modifyps.startTime=Start Time
+label.modifyps.radioProgram=Radio Program
+label.modifyps.programDate=Date of Program
+label.deleteps.value=Value
+label.deleteps.data=Data
+label.deleteps.year=Year (YYYY)
+label.deleteps.duration=Duration
+label.deleteps.startTime=Start Time
+label.deleteps.radioProgram=Radio Program
+label.deleteps.programDate=Date of Program
 label.crudrp.add=Create Radio Program
 label.crudrp.edit=Modify Radio Program
 label.crudrp.delete=Delete Radio Program
