Field validations added

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -64,8 +64,8 @@ label.crudrp=Maintain Radio Programs (Create, Modify and Delete)
 label.crudrp.name=Name
 label.crudrp.description=Description
 label.crudrp.duration=Duration
-label.createps.duration=Duration
-label.createps.startTime=Start Time
+label.createps.duration=Duration (hh:mm:ss)
+label.createps.startTime=Start Time (hh:mm:ss)
 label.createps.radioProgram=Radio Program
 label.createps.programDate=Date of Program
 label.modifyps.value=Value
