Changes for View Employment Details and Maintain Profile for Producer and Presenter. Profile picture is currently a string and will be updated to image later. Image upload is work in progress. Updated createphoenix.sql to create additional columns in User table. Initial profile data is null and must be created by individual presenters and producers. Other roles will not have the option to view/modify profile details.

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -15,6 +15,7 @@ title.createps=Create Program Slot
 title.modifyps=Modify Program Slot
 title.deleteps=Delete Program Slot
 title.createas=Create Annual Schedule
+title.viewempdetails=View Employment Details
 
 title.cruduser=Maintain User Page
 title.setupuser=Create/Modify/Delete User Page
@@ -45,7 +46,7 @@ caption.menu.setupSchedule=Maintain Schedule
 caption.menu.createps=Create Program Slot
 caption.menu.modifyps=Modify Program Slot
 caption.menu.deleteps=Delete Program Slot
-
+caption.menu.viewempdetails=View Employment Details
 # -----------------------------------------
 # Form field labels: used as prompts and for error handling
 # -----------------------------------------
@@ -114,6 +115,11 @@ label.cruduser.role=Role
 label.modifyuser.title=Modify User
 label.deleteuser.title=Delete User
 label.resetpassword.title=Reset Password
+label.viewempdetails.name=Name
+label.viewempdetails.email=Email
+label.viewempdetails.phoneno=Phone number
+label.viewempdetails.sitelink=Site link
+label.viewempdetails.profileimage=Profile image
 # -----------------------------------------
 # Application error messages
 # -----------------------------------------
