Updating codes for "delete program slots".

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -83,6 +83,7 @@ label.deleteps.duration=Duration
 label.deleteps.startTime=Start Time
 label.deleteps.radioProgram=Radio Program
 label.deleteps.programDate=Date of Program
+label.deleteps.programSlot=Program Slots
 label.crudrp.add=Create Radio Program
 label.crudrp.edit=Modify Radio Program
 label.crudrp.delete=Delete Radio Program
