--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -20,6 +20,8 @@ title.viewempdetails=View Employment Details
 title.cruduser=Maintain User Page
 title.setupuser=Create/Modify/Delete User Page
 title.manageuser=Maintain User
+title.searchpresenter=Search Presenter Page
+title.searchproducer=Search Producer Page
 # -----------------------------------------
 # Captions used for reference messages & menu items
 # -----------------------------------------
@@ -47,6 +49,7 @@ caption.menu.createps=Create Program Slot
 caption.menu.modifyps=Modify Program Slot
 caption.menu.deleteps=Delete Program Slot
 caption.menu.viewempdetails=View Employment Details
+caption.menu.searchpresenter=Search Presenter
 # -----------------------------------------
 # Form field labels: used as prompts and for error handling
 # -----------------------------------------
@@ -55,6 +58,8 @@ fieldLabel.password=Password
 fieldLabel.name=Radio Program Name
 fieldLabel.description=Radio Program Description
 fieldLabel.name.user=User Id
+fieldLabel.name.presenter=Presenter Name
+fieldLabel.name.producer=Producer Name
 # -----------------------------------------
 # Table labels: used for printing data
 # -----------------------------------------
@@ -121,6 +126,11 @@ label.viewempdetails.email=Email
 label.viewempdetails.phoneno=Phone number
 label.viewempdetails.sitelink=Site link
 label.viewempdetails.profileimage=Profile image
+
+label.presenter.name=Presenter Name
+label.presenter.email=Email
+label.presenter.phoneNumber=Phone Number
+label.presenter.action=Select
 # -----------------------------------------
 # Application error messages
 # -----------------------------------------
