Added logic to view profile picture from database.

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -125,7 +125,7 @@ label.viewempdetails.name=Name
 label.viewempdetails.email=Email
 label.viewempdetails.phoneno=Phone number
 label.viewempdetails.sitelink=Site link
-label.viewempdetails.profileimage=Profile image
+label.viewempdetails.profilepicture=Profile picture
 
 label.presenter.name=Presenter Name
 label.presenter.email=Email
