--- a/PRMS/web/WEB-INF/web.xml
+++ b/PRMS/web/WEB-INF/web.xml
@@ -12,6 +12,17 @@
         <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
         <param-value>ApplicationResource</param-value>
     </context-param>
+    <filter>
+        <description>Security Filter</description>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>sg.edu.nus.iss.phoenix.core.filter.SecurityFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>*.jsp</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
     <servlet>
         <servlet-name>tiles</servlet-name>
         <servlet-class>org.apache.tiles.web.startup.simple.SimpleTilesInitializerServlet</servlet-class>
