--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -127,10 +127,17 @@ label.viewempdetails.phoneno=Phone number
 label.viewempdetails.sitelink=Site link
 label.viewempdetails.profileimage=Profile image
 
+label.presenter.id = Presenter ID
 label.presenter.name=Presenter Name
 label.presenter.email=Email
 label.presenter.phoneNumber=Phone Number
 label.presenter.action=Select
+
+label.producer.id = Producer ID
+label.producer.name=Presenter Name
+label.producer.email=Email
+label.producer.phoneNumber=Phone Number
+label.producer.action=Select
 # -----------------------------------------
 # Application error messages
 # -----------------------------------------
