Additional fixes for Modify Program Slot.                 //For some reason, only duration is getting passed!                 //Please look into modifyps.jsp to check why the parameters are not passed.

--- a/PRMS/src/java/ApplicationResources.properties
+++ b/PRMS/src/java/ApplicationResources.properties
@@ -123,13 +123,13 @@ label.viewempdetails.phoneno=Phone number
 label.viewempdetails.sitelink=Site link
 label.viewempdetails.profilepicture=Profile picture
 
-label.presenter.id = Presenter ID
+label.presenter.id = Presenter
 label.presenter.name=Presenter Name
 label.presenter.email=Email
 label.presenter.phoneNumber=Phone Number
 label.presenter.action=Select
 
-label.producer.id = Producer ID
+label.producer.id = Producer
 label.producer.name=Presenter Name
 label.producer.email=Email
 label.producer.phoneNumber=Phone Number
